BuildingsPy Changelog
---------------------

Version 3.0.0, xxx, 2021 -- Release 3.0
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- For merge script, renamed set_excluded_packages to set_excluded_directories
  (https://github.com/lbl-srg/BuildingsPy/issues/439)
- For Dymola simulations, corrected call to openModel in buildingspy/simulate/Dymola.py
- For unit tests, avoided copying .log and .mat files to temporary directory
  (https://github.com/lbl-srg/BuildingsPy/issues/428)
- For unit tests with Optimica, added check for access to component that are not present in constraining type of declaration
  (https://github.com/lbl-srg/BuildingsPy/issues/424)
- For library merger, corrected erroneous replacement of IBPSA in name of issue number
  (https://github.com/lbl-srg/BuildingsPy/issues/412)
- For unit tests, set Advanced.GenerateVariableDependencies = false as this can change the set of nonlinear equations
  (https://github.com/lbl-srg/BuildingsPy/issues/410)
- Added local relative tolerance along y axis by default
  (https://github.com/lbl-srg/BuildingsPy/pull/396)
- Fix rounding error issue on start and stop time values
  (https://github.com/lbl-srg/BuildingsPy/issues/363)
- For unit tests, ignore zero-size linear and nonlinear equations when comparing statistics
  (https://github.com/lbl-srg/BuildingsPy/issues/406)
- For unit tests, changed warning to an error if start or end times differ from reference results
  (https://github.com/lbl-srg/BuildingsPy/issues/404)
- Corrected timeout handling in buildingspy.simulate.base_simulator.py
  (https://github.com/lbl-srg/BuildingsPy/issues/385)
- Corrected class name lookup mechanism in buildingspy.development.refactor.move_class()
  (https://github.com/lbl-srg/BuildingsPy/issues/382)
- For unit tests, added optional comment that is printed if a model is excluded from
  the tests (https://github.com/lbl-srg/BuildingsPy/issues/389)