@@ -3,6 +3,9 @@ BuildingsPy Changelog
 
 Version 3.0.0, xxx, 2021 -- Release 3.0
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+- For unit tests, changed code to generate names of Dymola output file to ensure that they are unique.
+  Previously, an error was issued if they are not unique.
+  (https://github.com/lbl-srg/BuildingsPy/issues/446)
 - For merge script, renamed set_excluded_packages to set_excluded_directories
   (https://github.com/lbl-srg/BuildingsPy/issues/439)
 - For Dymola simulations, corrected call to openModel in buildingspy/simulate/Dymola.py
